# aiologstash

./: .isort.cfg  .travis.yml  CHANGES.rst  LICENSE  Makefile  README.md  README.rst  flit.ini  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yml
aiologstash/: __init__.py  base_handler.py  tcp_handler.py
async_logstash/: __init__.py  base_handler.py  tcp_handler.py
requirements/: ci.txt  dev.txt  lint.txt  prod.txt
tests/: conftest.py  test_closing.py  test_emit.py  test_simple.py
